--- a/data/jsbins.yaml
+++ b/data/jsbins.yaml
@@ -39,7 +39,7 @@ jsbin_hash:
   F/zG8YD+tX6yPBF8jF5kkwa6wwE=: omojoy
   kFsT2eCL2NRWubzQ8OC3BMNZFYg=: ozecar
   6BxZ2LJaEmxbhp7m+biUV2Aufio=: ukuwol
-  Iotbp/TKZhlmyYQK5qi9VkFq1OA=: izujov
+  XaW+t3v4sFT217bqEc7FLGYFFlA=: apipap
 jsbin_id:
   adapters/pusher-pub-sub: jQncq6OcBR6KCAsxnz3q5mit6m4=
   adapters/pubnub-pub-sub: YuO2+EE7oigITwEqrbpZKS6sa38=
@@ -80,4 +80,4 @@ jsbin_id:
   rest/batch-publish: QpWcBC3b2jjsQipl92imgOBQ4iI=
   sse/sse: 6BxZ2LJaEmxbhp7m+biUV2Aufio=
   sse/eventstream: kFsT2eCL2NRWubzQ8OC3BMNZFYg=
-  rest/batch-presence: Iotbp/TKZhlmyYQK5qi9VkFq1OA=
+  rest/batch-presence: XaW+t3v4sFT217bqEc7FLGYFFlA=
